Closed Bug 162691 Opened 22 years ago Closed 22 years ago

crash at print regression testcase Trunk N700 [@ SetPrintSettingsFromDevMode]

Categories

(Core :: Printing: Output, defect, P2)

x86
Windows 98
defect

Tracking

()

RESOLVED FIXED
mozilla1.2alpha

People

(Reporter: bernd_mozilla, Assigned: karnaze)

References

()

Details

(Keywords: crash, topcrash, Whiteboard: [PATCH])

Crash Data

Attachments

(1 file, 1 obsolete file)

I cant run the print regression tests as I crash at the url when printing it. it
looks like OrderRowGroups returns a number of rowGroups=2. I runned these some
days ago before the checkin for the nsCellmap update. Some people report that
they crash also with the nightly while I cant repro it with a nightly.
It seems to be more for Chris
Assignee: rods → karnaze
i have a talkback id for that, crashed with nightly 2002081308 winXP
TB9336978K

it also crashed with 2002081218 but those two talkbacks somehow disappeared.
Could this be related to a patch fix for the bug #159358??
Stack from Incident #9336978 (in comment 2)
-------------------
Product ID  MozillaTrunk
Build ID 2002081308
Operating System Windows NT 5.1 build 2600

Stack Trace
SetPrintSettingsFromDevMode
[c:/builds/seamonkey/mozilla/embedding/components/printingui/src/win/nsPrintDialogUtil.cpp,
line 304]
ShowNativePrintDialog
[c:/builds/seamonkey/mozilla/embedding/components/printingui/src/win/nsPrintDialogUtil.cpp,
line 1046]
NativeShowPrintDialog
[c:/builds/seamonkey/mozilla/embedding/components/printingui/src/win/nsPrintDialogUtil.cpp,
line 1431]
nsPrintingPromptService::ShowPrintDialog
[c:/builds/seamonkey/mozilla/embedding/components/printingui/src/win/nsPrintingPromptService.cpp,
line 187]
DocumentViewerImpl::Print
[c:/builds/seamonkey/mozilla/content/base/src/nsDocumentViewer.cpp, line 7182]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp,
line 106]
XPCWrappedNative::CallMethod
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 1996]
XPC_WN_CallMethod
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp,
line 1267]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 840]
js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2792]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 856]
js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 931]
JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c, line 3433]
nsJSContext::CallEventHandler
[c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp, line 1044]
nsJSEventListener::HandleEvent
[c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp, line 184]
nsEventListenerManager::HandleEventSubType
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line
1183]
nsEventListenerManager::HandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line
2171]
nsXULElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 3453]
nsXULElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 3472]
nsXULElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 3472]
PresShell::HandleDOMEventWithTarget
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6155]
nsButtonBoxFrame::MouseClicked
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp, line 200]
nsButtonBoxFrame::HandleEvent
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp, line 147]
PresShell::HandleEventInternal
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6124]
PresShell::HandleEventWithTarget
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6075]
nsEventStateManager::CheckForAndDispatchClick
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp, line 2759]
nsEventStateManager::PostHandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventStateManager.cpp, line 1763]
PresShell::HandleEventInternal
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6128]
PresShell::HandleEvent
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6030]
nsViewManager::HandleEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp, line 2098]
nsView::HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp, line 301]
nsViewManager::DispatchEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp, line 1909]
HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp, line 83]
nsWindow::DispatchEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1038]
nsWindow::DispatchWindowEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1055]
nsWindow::DispatchMouseEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 5127]
ChildWindow::DispatchMouseEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 5382]
nsWindow::ProcessMessage
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 3834]
nsWindow::WindowProc
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1304]
USER32.dll + 0x3a5f (0x77d43a5f)
USER32.dll + 0x3b2e (0x77d43b2e)
USER32.dll + 0x3d6a (0x77d43d6a)
USER32.dll + 0x41fd (0x77d441fd)
nsAppShellService::Run
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp, line 452]
main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1525]
main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1876]
WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1894]
WinMainCRTStartup()
kernel32.dll + 0x1eb69 (0x77e7eb69)
kw -> crash, severity -> critical
Severity: normal → critical
Keywords: crash
Summary: crash at print regression testcase → crash at print regression testcase [@ SetPrintSettingsFromDevMode]
I backed out the patch for bug 159358, but my debug build still crashes but the
crash has nothing in common with the TB stack trace.
Attached patch patch v0 (obsolete) — Splinter Review
I need to discuss this with Chris. It relieves the pain for me, but I think the
general problem is that nsContainerFrame::Reflow will remove the nextsiblings
if the status is complete and then the rowgroups become out of sync.
Attachment #95690 - Attachment is obsolete: true
Comment on attachment 97052 [details] [diff] [review]
pach to exlude next-in-flows from ordered row groups

r=bernd 
looks really more elegant than my hack
Attachment #97052 - Flags: review+
Comment on attachment 97052 [details] [diff] [review]
pach to exlude next-in-flows from ordered row groups

sr=kin@netscape.com
Attachment #97052 - Flags: superreview+
Checked into the trunk.
Status: NEW → RESOLVED
Closed: 22 years ago
Priority: -- → P2
Resolution: --- → FIXED
Whiteboard: [PATCH]
Target Milestone: --- → mozilla1.2alpha
This crash is still happening in some form on the MozillaTrunk (see bug 169689).  

It also continues to be a topcrasher with Netscape 7.0.  It's probably too late
to get into Blackbird...but just wanted to point that out.
Keywords: topcrash
Summary: crash at print regression testcase [@ SetPrintSettingsFromDevMode] → crash at print regression testcase Trunk N700 [@ SetPrintSettingsFromDevMode]
Crash Signature: [@ SetPrintSettingsFromDevMode]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: