bug 162691 - don't include siblings which will be next in flows when ordering row groups. sr=kin, r=bernd.